[package]
name = "sriv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
anyhow = "1.0.71"
rayon = "1.7.0"
toml = "0.5"
nannou = "0.19"
sha1 = "0.6"
crossbeam = "0.8.4"
crossbeam-channel = "0.5"
rexif = "0.7.5"
candle = { package = "candle-core", version = "0.9.1" }
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
hf-hub = "0.4.1"
tokenizers = { version = "0.21.0", default-features = false, features = ["fancy-regex"] }
num_cpus = "1.17"
